src/pages/Connect/ConnectView.css
.author-img {
  width: 200px;
  height: 200px;

  border-radius: 50%;
  border: solid 1px var(--light-blue-2);
}

/* Socials */
.socials-container ul {
  display: flex;
  flex-direction: column;
  gap: var(--gap-sm);
  list-style-type: none;
}

.social-link-btn {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: var(--gap-sm);
  width: 100%;
  height: 100%;

  padding: var(--padding-sm);
  background: var(--light-blue-2);
  border: solid 1px var(--light-blue-1);
  border-radius: var(--border-radius-sm);

  color: var(--light-blue-4);
  text-decoration: none;
}

.social-link-btn:hover {
  background: var(--light-blue-5);
}

.socials-container ul li svg {
  width: 18px;
  height: 18px;
}

/* About Me */
.about-me-container {
  display: flex;
  flex-direction: column;
  gap: var(--gap-sm);
}

@media (width <= 900px) {
  .author-img {
    display: none;
  }
}

